# HashTrie

./: .gitignore  CMakeLists.txt  README.md
HashCollection/: HashCollection.h
HashTrie/: HashTrie.cpp  HashTrie.h
HashTrie/Trie/: Node.cpp  Node.h  Trie.cpp  Trie.h
TxtReader/: TxtReader.cpp  TxtReader.h
